# vita-idu

./: CMakeLists.txt
src/: main.c
